--- a/UsusLocadora/.project
+++ b/UsusLocadora/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Code-Smell-UENP</name>
+	<name>LocadoraUenp</name>
 	<comment></comment>
 	<projects>
 	</projects>
